--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 		<meta charset="utf-8">
 		<meta http-equiv="X-UA-Compatible" content="IE=edge">
 		<title>M&CO</title>
+		<link rel="shortcut icon" type="image/png" href="favicon.ico"/>
 		<link rel="stylesheet" href="assets/css/normalize-dist.css">
 		<link rel="stylesheet" href="assets/css/fullpage-dist.css">
 		<link rel="stylesheet" href="assets/css/main.css">
