--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 	<head>
 		<meta charset="utf-8">
 		<meta http-equiv="X-UA-Compatible" content="IE=edge">
+		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<title>M&CO</title>
 		<link rel="shortcut icon" type="image/png" href="favicon.ico"/>
 		<link rel="stylesheet" href="assets/css/normalize-dist.css">
