added functionallity navbar

--- a/index.html
+++ b/index.html
@@ -21,13 +21,13 @@
 					</figure>
 					<ul class="_flex header-ul">
 						<span id="marker"></span>
-						<li><a class="header-link active" href="#"><span>Home</span></a></li>
-						<li><a class="header-link" href="#"><span>About Us</span></a></li>
-						<li><a class="header-link" href="#"><span>Practices</span></a></li>
-						<li><a class="header-link" href="#"><span>Lawyers</span></a></li>
-						<li><a class="header-link" href="#"><span>Resources</span></a></li>
-						<li><a class="header-link" href="#"><span>Brochures</span></a></li>
-						<li><a class="header-link" href="#"><span>Contact & Career</span></a></li>
+						<li><a class="header-link active" href="#anchor1"><span>Home</span></a></li>
+						<li><a class="header-link" href="#anchor2"><span>About Us</span></a></li>
+						<li><a class="header-link" href="#anchor3"><span>Practices</span></a></li>
+						<li><a class="header-link" href="#anchor4"><span>Lawyers</span></a></li>
+						<li><a class="header-link" href="#anchor5"><span>Resources</span></a></li>
+						<li><a class="header-link" href="#anchor6"><span>Brochures</span></a></li>
+						<li><a class="header-link" href="#anchor7"><span>Contact & Career</span></a></li>
 					</ul>
 				</nav>
 			</div>
@@ -43,6 +43,7 @@
 							to move further faster. </h1>
 						</div>
 					</div>
+
 					<div data-anchor-name="anchor2" class="section yellow">
 						<div class="content content-two _flex">
 							<div class="content-side-nav">
@@ -53,18 +54,167 @@
 								</ul>
 							</div>
 							<div class="content-the-content">
-								<div class="content-overflow-inside fullpage-overflow">
+								<article class="content-overflow-inside fullpage-overflow">
 									<p> In line with the transformation process of the country initiated in 1998 by the Indonesian reformation movement to become one of the largest democratic countries in the world; the legal needs of both domestic and foreign business in recent years have been tremendously increased in complexity. In addition, the frequency of domestic, global transactions which require legal advice and broad experience in various practices areas is also increasing. Businesses are now more cautious of legal risks that may arise from their decision based on the existing laws and regulations which become more complex. In order to meet the needs of our clients in such a condition, the ability of our law firm consisting of teams of lawyers possessing both knowledge and experience in the various legal specialty areas necessary to deal with our clients’ need is paramountly important.<br><br>
 
 									We are continuously endeavoring to develop the expertise of our firm’s members through various training and ongoing education arrangement and at the same time sharing our member’s collective knowledge experience, skills and databases. We require all firm members to comply with and demonstrate the highest standards of professional ethics and integrity in their practice for providing legal services to our clients.<br>
 									In line with the transformation process of the country initiated in 1998 by the Indonesian reformation movement to become one of the largest democratic countries in the world; the legal needs of both domestic and foreign business in recent years have been tremendously increased in complexity. In addition, the frequency of domestic, global transactions which require legal advice and broad experience in various practices areas is also increasing. Businesses are now more cautious of legal risks that may arise from their decision based on the existing laws and regulations which become more complex. In order to meet the needs of our clients in such a condition, the ability of our law firm consisting of teams of lawyers possessing both knowledge and experience in the various legal specialty areas necessary to deal with our clients’ need is paramountly important.<br><br></p>
-								</div>
+								</article>
 								<div class="content-overflow-process"><span></span></div>
 							</div>
 						</div>
 					</div>
-					<!-- <div data-anchor-name="anchor3" class="section">Some section</div>
-					<div data-anchor-name="anchor4" class="section">Some section</div> -->
+
+					<div data-anchor-name="anchor3" class="section">
+						<div class="content content-two _flex">
+							<div class="content-side-nav">
+								<ul class="_flex-col _list-none">
+									<ul class="content-side-nav-group _list-none">
+										<li>corporate / m&A</li>
+										<li><a class="transformer active" href="#">Banking →</a></li>
+										<li><a class="transformer" href="#">Bankruptcy & Insolvency →</a></li>
+										<li><a class="transformer" href="#">Capital Markets →</a></li>
+										<li><a class="transformer" href="#">Finance →</a></li>
+										<li><a class="transformer" href="#">General Corporate →</a></li>
+										<li><a class="transformer" href="#">Bankruptcy & Insolvency →</a></li>
+										<li><a class="transformer" href="#">Capital Markets →</a></li>
+										<li><a class="transformer" href="#">Finance →</a></li>
+										<li><a class="transformer" href="#">General Corporate →</a></li>
+									</ul>
+
+									<ul class="content-side-nav-group _list-none">
+										<li>litigation</li>
+										<li><a class="transformer" href="#">Banking →</a></li>
+										<li><a class="transformer" href="#">Bankruptcy & Insolvency →</a></li>
+										<li><a class="transformer" href="#">Capital Markets →</a></li>
+										<li><a class="transformer" href="#">Finance →</a></li>
+										<li><a class="transformer" href="#">General Corporate →</a></li>
+										<li><a class="transformer" href="#">Bankruptcy & Insolvency →</a></li>
+										<li><a class="transformer" href="#">Capital Markets →</a></li>
+										<li><a class="transformer" href="#">Finance →</a></li>
+										<li><a class="transformer" href="#">General Corporate →</a></li>
+									</ul>
+								</ul>
+							</div>
+							<div class="content-the-content">
+								<article class="content-overflow-inside fullpage-overflow">
+									<p> In line with the transformation process of the country initiated in 1998 by the Indonesian reformation movement to become one of the largest democratic countries in the world; the legal needs of both domestic and foreign business in recent years have been tremendously increased in complexity. In addition, the frequency of domestic, global transactions which require legal advice and broad experience in various practices areas is also increasing. Businesses are now more cautious of legal risks that may arise from their decision based on the existing laws and regulations which become more complex. In order to meet the needs of our clients in such a condition, the ability of our law firm consisting of teams of lawyers possessing both knowledge and experience in the various legal specialty areas necessary to deal with our clients’ need is paramountly important.<br><br>
+
+									We are continuously endeavoring to develop the expertise of our firm’s members through various training and ongoing education arrangement and at the same time sharing our member’s collective knowledge experience, skills and databases. We require all firm members to comply with and demonstrate the highest standards of professional ethics and integrity in their practice for providing legal services to our clients.<br>
+									In line with the transformation process of the country initiated in 1998 by the Indonesian reformation movement to become one of the largest democratic countries in the world; the legal needs of both domestic and foreign business in recent years have been tremendously increased in complexity. In addition, the frequency of domestic, global transactions which require legal advice and broad experience in various practices areas is also increasing. Businesses are now more cautious of legal risks that may arise from their decision based on the existing laws and regulations which become more complex. In order to meet the needs of our clients in such a condition, the ability of our law firm consisting of teams of lawyers possessing both knowledge and experience in the various legal specialty areas necessary to deal with our clients’ need is paramountly important.<br><br></p>
+								</article>
+								<div class="content-overflow-process"><span></span></div>
+							</div>
+						</div>
+					</div>
+
+					<div data-anchor-name="anchor4" class="section gray">
+						<div class="content content-two _flex">
+							<div class="content-side-nav">
+								<ul class="_flex-col _list-none">
+									<ul class="content-side-nav-group _list-none">
+										<li>partners</li>
+										<li><a class="transformer active" href="#">Giunseng E.P. Manullang</a></li>
+										<li><a class="transformer" href="#">Gideon Ardin T. Manullang</a></li>
+									</ul>
+
+									<ul class="content-side-nav-group _list-none">
+										<li>associates</li>
+										<li><a class="transformer" href="#">Edwina janu anjayani</a></li>
+										<li><a class="transformer" href="#">fredy n. montoalu, s.h.</a></li>
+										<li><a class="transformer" href="#">hadimba r.h. sibarani</a></li>
+									</ul>
+								</ul>
+							</div>
+							<div class="content-the-content">
+								<div class="content-partners">
+									<figure class="partners-img">
+										<div>
+											<img src="assets/img/pic-1.png">
+										</div>
+									</figure>
+									<h2 class="partners-name">Giunseng E.P. Manullang</h2>
+									<h2 class="partners-desc">PARTNER</h2>
+								</div>
+								<article class="content-overflow-inside content-partners-article">
+									<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam rutrum lorem non leo aliquam consequat et eu lacus. Aliquam sit amet eros ut odio ornare vulputate. Morbi elit dolor, tristique sed enim sagittis, tincidunt dignissim dui. Suspendisse ut lectus at lectus varius facilisis. Integer egestas hendrerit fermentum. Fusce a tincidunt libero. Donec convallis quam mauris. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam rutrum lorem non leo aliquam consequat et eu lacus. Aliquam sit amet eros ut odi.</p>
+								</article>
+							</div>
+						</div>
+					</div>
+
+					<div data-anchor-name="anchor5" class="section">
+						<div class="content content-two _flex">
+							<div class="content-side-nav article-side-nav">
+								<ul class="_flex-col _list-none article-group">
+									<li><a class="transformer active" href="#">Enforcement of International Arbitration Award →</a></li>
+									<li><a class="transformer" href="#">Foreign Direct Investment →</a></li>
+									<li><a class="transformer" href="#">LOREM IPSUM →</a></li>
+									<li><a class="transformer" href="#">Dolor Amet →</a></li>
+								</ul>
+								<div class="side-nav-pagination">
+									<a class="active" href="#">1</a>
+									<a href="#">2</a>
+									<a href="#">3</a>
+									<a href="#">4</a>
+									<a href="#">5</a>
+								</div>
+							</div>
+							<div class="content-the-content article-content">
+								<article class="content-overflow-inside article-content-wrapper">
+									<p>The 1958 United Nations Conventions <br> on the Recognition and Enforcement of Foreign Arbitral Awards (The “New York Convention”) was ratified by Indonesia in 1981. Nevertheless, before implementing regulations of this New York Convention were promulgated, the courts remained reluctant to enforce<br> foreign-rendered awards in spite of the <a class="article-more" href="#">Read more (...)</a> </p>
+								</article>
+							</div>
+						</div>
+					</div>
+
+					<div data-anchor-name="anchor6" class="section yellow">
+						<div class="content content-two _flex">
+							<div class="content-side-nav">
+								<ul class="_flex-col _list-none">
+									<li><a class="transformer active" href="#">banking →</a></li>
+									<li><a class="transformer" href="#">firm profile →</a></li>
+								</ul>
+							</div>
+							<div class="content-the-content">
+								<article class="content-overflow-inside fullpage-overflow">
+									<p>Maecenas aliquet ac justo nec lobortis. Donec imperdiet sapien tempor semper dictum. Vivamus vulputate ornare neque sit amet viverra. Ut eros leo, congue et facilisis in, tincidunt viverra dui. Quisque accumsan ante sed sem aliquam, ut convallis nibh semper. Ut ornare, lectus vitae venenatis molestie, nunc orci pharetra neque, vel sollicitudin ex tellus sagittis tortor. In hac habitasse platea dictumst. Pellentesque tincidunt nulla at libero consequat, sed ornare elit ornare. Phasellus lobortis velit eu lacus suscipit sagittis. Praesent sed pulvinar lectus, et dapibus lectus. Praesent sodales fermentum justo, in auctor orci dictum a. Phasellus ac lectus vitae sem ultrices dignissim. Fusce commodo consequat iaculis. Morbi maximus pharetra lacinia. Vestibulum viverra, felis vel venenatis euismod, justo nisl porttitor odio, sit amet mattis dolor justo non tellus.  Maecenas aliquet ac justo nec lobortis. Donec imperdiet sapien tempor semper dictum. Vivamus vulputate ornare neque sit amet viverra. Ut eros leo, congue et facilisis in, tincidunt viverra dui. Quisque accumsan ante sed sem aliquam, ut convallis nibh semper. Ut ornare, lectus vitae venenatis molestie, nunc orci pharetra neque, vel sollicitudin ex tellus sagittis tortor. In hac habitasse platea dictumst. Pellentesque tincidunt nulla at libero consequat, sed ornare elit ornare. Phasellus lobortis velit eu lacus suscipit sagittis. Praesent sed pulvinar lectus, et dapibus lectus. Praesent sodales fermentum justo, in auctor orci dictum a. Phasellus ac lectus vitae sem ultrices dignissim. Fusce commodo consequat iaculis. Morbi maximus pharetra lacinia. Vestibulum viverra, felis vel venenatis euismod, justo nisl porttitor odio, sit amet mattis dolor justo non tellus. </p>
+								</article>
+								<!-- <div class="content-overflow-process"><span></span></div> -->
+								<h2 class="content-download-link">
+									<a href="#">download banking brochure</a>
+								</h2>
+							</div>
+						</div>
+					</div>
+
+					<div data-anchor-name="anchor7" class="section">
+						<div class="content content-two _flex">
+							<div class="content-side-nav">
+								
+							</div>
+							<div class="content-the-content _flex-col">
+								<article class="content-overflow-inside contact-content">
+									<p>EightyEight@Kasablanka Office <br>
+									Tower A, 7th Floor <br>
+									Jl. Casablanca Raya Kav. 88 <br>
+									Jakarta 12870 – Indonesia +62.21.2956.8573<br><br>
+
+									m@manullang.co<br>
+									www.manullang.co<br><br>
+
+									<a href="#">Job Vacancies</a></p>
+								</article>
+								<!-- <div class="content-overflow-process"><span></span></div> -->
+								<div class="content-footer _flex">
+									<span><a href="#">disclaimer</a></span>
+									<span><a href="#">privacy policy</a></span>
+									<span><a href="#">copyright@2018</a></span>
+								</div>
+							</div>
+						</div>
+					</div>
+
 				</div>
 			</div>
 		</div>
