done responsive mobile & change responsive to max

--- a/index.html
+++ b/index.html
@@ -18,6 +18,13 @@
 						<a href="#">
 							<img src="assets/img/logo.svg">
 						</a>
+						<div class="mobile-nav">
+							<div class="hamburger">
+								<span></span>
+								<span></span>
+								<span></span>
+							</div>
+						</div>
 					</figure>
 					<ul class="_flex header-ul">
 						<span id="marker"></span>
@@ -136,7 +143,7 @@
 									<h2 class="partners-name">Giunseng E.P. Manullang</h2>
 									<h2 class="partners-desc">PARTNER</h2>
 								</div>
-								<article class="content-overflow-inside content-partners-article">
+								<article class="content-overflow-inside fullpage-overflow content-partners-article">
 									<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam rutrum lorem non leo aliquam consequat et eu lacus. Aliquam sit amet eros ut odio ornare vulputate. Morbi elit dolor, tristique sed enim sagittis, tincidunt dignissim dui. Suspendisse ut lectus at lectus varius facilisis. Integer egestas hendrerit fermentum. Fusce a tincidunt libero. Donec convallis quam mauris. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam rutrum lorem non leo aliquam consequat et eu lacus. Aliquam sit amet eros ut odi.</p>
 								</article>
 							</div>
@@ -217,6 +224,10 @@
 
 				</div>
 			</div>
+		</div>
+
+		<div class="marker-bottom">
+			<span></span>
 		</div>
 		<script type="text/javascript" src="assets/js/scrollmagic.js"></script>
 		<script type="text/javascript" src="assets/js/main-dist.js"></script>
