fix bug responsive with fix process overflow

--- a/index.html
+++ b/index.html
@@ -146,6 +146,7 @@
 								<article class="content-overflow-inside fullpage-overflow content-partners-article">
 									<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam rutrum lorem non leo aliquam consequat et eu lacus. Aliquam sit amet eros ut odio ornare vulputate. Morbi elit dolor, tristique sed enim sagittis, tincidunt dignissim dui. Suspendisse ut lectus at lectus varius facilisis. Integer egestas hendrerit fermentum. Fusce a tincidunt libero. Donec convallis quam mauris. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam rutrum lorem non leo aliquam consequat et eu lacus. Aliquam sit amet eros ut odi.</p>
 								</article>
+								<div class="content-overflow-process"><span></span></div>
 							</div>
 						</div>
 					</div>
@@ -168,9 +169,10 @@
 								</div>
 							</div>
 							<div class="content-the-content article-content">
-								<article class="content-overflow-inside article-content-wrapper">
-									<p>The 1958 United Nations Conventions <br> on the Recognition and Enforcement of Foreign Arbitral Awards (The “New York Convention”) was ratified by Indonesia in 1981. Nevertheless, before implementing regulations of this New York Convention were promulgated, the courts remained reluctant to enforce<br> foreign-rendered awards in spite of the <a class="article-more" href="#">Read more (...)</a> </p>
+								<article class="fullpage-overflow content-overflow-inside article-content-wrapper">
+									<p>The 1958 United Nations Conventions <br> on the Recognition and Enforcement of Foreign Arbitral Awards (The “New York Convention”) was ratified by Indonesia in 1981. Nevertheless, before implementing regulations of this New York Convention were promulgated, the courts remained reluctant to enforce<br> foreign-rendered awards in spite of the The 1958 United Nations Conventions <br> on the Recognition and Enforcement of Foreign Arbitral Awards (The “New York Convention”) was ratified by Indonesia in 1981. Nevertheless, before implementing regulations of this New York Convention were promulgated, the courts remained reluctant to enforce<br> foreign-rendered awards in spite of the  The 1958 United Nations Conventions <br> on the Recognition and Enforcement of Foreign Arbitral Awards (The “New York Convention”) was ratified by Indonesia in 1981. Nevertheless, before implementing regulations of this New York Convention were promulgated, the courts remained reluctant to enforce<br> foreign-rendered awards in spite of the The 1958 United Nations Conventions <br> on the Recognition and Enforcement of Foreign Arbitral Awards (The “New York Convention”) was ratified by Indonesia in 1981. Nevertheless, before implementing regulations of this New York Convention were promulgated, the courts remained reluctant to enforce<br> foreign-rendered awards in spite of the  <a class="article-more" href="#">Read more (...)</a> </p>
 								</article>
+								<div class="content-overflow-process"><span></span></div>
 							</div>
 						</div>
 					</div>
@@ -187,7 +189,7 @@
 								<article class="content-overflow-inside fullpage-overflow">
 									<p>Maecenas aliquet ac justo nec lobortis. Donec imperdiet sapien tempor semper dictum. Vivamus vulputate ornare neque sit amet viverra. Ut eros leo, congue et facilisis in, tincidunt viverra dui. Quisque accumsan ante sed sem aliquam, ut convallis nibh semper. Ut ornare, lectus vitae venenatis molestie, nunc orci pharetra neque, vel sollicitudin ex tellus sagittis tortor. In hac habitasse platea dictumst. Pellentesque tincidunt nulla at libero consequat, sed ornare elit ornare. Phasellus lobortis velit eu lacus suscipit sagittis. Praesent sed pulvinar lectus, et dapibus lectus. Praesent sodales fermentum justo, in auctor orci dictum a. Phasellus ac lectus vitae sem ultrices dignissim. Fusce commodo consequat iaculis. Morbi maximus pharetra lacinia. Vestibulum viverra, felis vel venenatis euismod, justo nisl porttitor odio, sit amet mattis dolor justo non tellus.  Maecenas aliquet ac justo nec lobortis. Donec imperdiet sapien tempor semper dictum. Vivamus vulputate ornare neque sit amet viverra. Ut eros leo, congue et facilisis in, tincidunt viverra dui. Quisque accumsan ante sed sem aliquam, ut convallis nibh semper. Ut ornare, lectus vitae venenatis molestie, nunc orci pharetra neque, vel sollicitudin ex tellus sagittis tortor. In hac habitasse platea dictumst. Pellentesque tincidunt nulla at libero consequat, sed ornare elit ornare. Phasellus lobortis velit eu lacus suscipit sagittis. Praesent sed pulvinar lectus, et dapibus lectus. Praesent sodales fermentum justo, in auctor orci dictum a. Phasellus ac lectus vitae sem ultrices dignissim. Fusce commodo consequat iaculis. Morbi maximus pharetra lacinia. Vestibulum viverra, felis vel venenatis euismod, justo nisl porttitor odio, sit amet mattis dolor justo non tellus. </p>
 								</article>
-								<!-- <div class="content-overflow-process"><span></span></div> -->
+								<div class="content-overflow-process"><span></span></div>
 								<h2 class="content-download-link">
 									<a href="#">download banking brochure</a>
 								</h2>
