--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 		<link rel="shortcut icon" type="image/png" href="favicon.ico"/>
 		<link rel="stylesheet" href="assets/css/normalize-dist.css">
 		<link rel="stylesheet" href="assets/css/fullpage-dist.css">
-		<link rel="stylesheet" href="assets/css/main.css">
+		<link rel="stylesheet" href="assets/css/main.css?ver=2">
 	</head>
 	<body data-controller="home">
 		<header id="header">
@@ -54,6 +54,7 @@
 					<div data-anchor-name="anchor2" class="section yellow">
 						<div class="content content-two _flex">
 							<div class="content-side-nav">
+								<button class="close-side-nav-mobile"></button>
 								<ul class="_flex-col _list-none">
 									<li><a class="transformer active" href="#">greetings →</a></li>
 									<li><a class="transformer" href="#">profiles →</a></li>
@@ -61,6 +62,9 @@
 								</ul>
 							</div>
 							<div class="content-the-content">
+								<h2 class="title-content">
+									Greetings
+								</h2>
 								<article class="content-overflow-inside fullpage-overflow">
 									<p> In line with the transformation process of the country initiated in 1998 by the Indonesian reformation movement to become one of the largest democratic countries in the world; the legal needs of both domestic and foreign business in recent years have been tremendously increased in complexity. In addition, the frequency of domestic, global transactions which require legal advice and broad experience in various practices areas is also increasing. Businesses are now more cautious of legal risks that may arise from their decision based on the existing laws and regulations which become more complex. In order to meet the needs of our clients in such a condition, the ability of our law firm consisting of teams of lawyers possessing both knowledge and experience in the various legal specialty areas necessary to deal with our clients’ need is paramountly important.<br><br>
 
@@ -75,6 +79,7 @@
 					<div data-anchor-name="anchor3" class="section">
 						<div class="content content-two _flex">
 							<div class="content-side-nav">
+								<button class="close-side-nav-mobile"></button>
 								<ul class="_flex-col _list-none">
 									<ul class="content-side-nav-group _list-none">
 										<li>corporate / m&A</li>
@@ -104,6 +109,9 @@
 								</ul>
 							</div>
 							<div class="content-the-content">
+								<h2 class="title-content">
+									Banking
+								</h2>
 								<article class="content-overflow-inside fullpage-overflow">
 									<p> In line with the transformation process of the country initiated in 1998 by the Indonesian reformation movement to become one of the largest democratic countries in the world; the legal needs of both domestic and foreign business in recent years have been tremendously increased in complexity. In addition, the frequency of domestic, global transactions which require legal advice and broad experience in various practices areas is also increasing. Businesses are now more cautious of legal risks that may arise from their decision based on the existing laws and regulations which become more complex. In order to meet the needs of our clients in such a condition, the ability of our law firm consisting of teams of lawyers possessing both knowledge and experience in the various legal specialty areas necessary to deal with our clients’ need is paramountly important.<br><br>
 
@@ -118,6 +126,7 @@
 					<div data-anchor-name="anchor4" class="section gray">
 						<div class="content content-two _flex">
 							<div class="content-side-nav">
+								<button class="close-side-nav-mobile"></button>
 								<ul class="_flex-col _list-none">
 									<ul class="content-side-nav-group _list-none">
 										<li>partners</li>
@@ -154,6 +163,7 @@
 					<div data-anchor-name="anchor5" class="section">
 						<div class="content content-two _flex">
 							<div class="content-side-nav article-side-nav">
+								<button class="close-side-nav-mobile"></button>
 								<ul class="_flex-col _list-none article-group">
 									<li><a class="transformer active" href="#">Enforcement of International Arbitration Award →</a></li>
 									<li><a class="transformer" href="#">Foreign Direct Investment →</a></li>
@@ -169,6 +179,9 @@
 								</div>
 							</div>
 							<div class="content-the-content article-content">
+								<h2 class="title-content">
+									Enforcement of International Arbitration Award →
+								</h2>
 								<article class="fullpage-overflow content-overflow-inside article-content-wrapper">
 									<p>The 1958 United Nations Conventions <br> on the Recognition and Enforcement of Foreign Arbitral Awards (The “New York Convention”) was ratified by Indonesia in 1981. Nevertheless, before implementing regulations of this New York Convention were promulgated, the courts remained reluctant to enforce<br> foreign-rendered awards in spite of the The 1958 United Nations Conventions <br> on the Recognition and Enforcement of Foreign Arbitral Awards (The “New York Convention”) was ratified by Indonesia in 1981. Nevertheless, before implementing regulations of this New York Convention were promulgated, the courts remained reluctant to enforce<br> foreign-rendered awards in spite of the  The 1958 United Nations Conventions <br> on the Recognition and Enforcement of Foreign Arbitral Awards (The “New York Convention”) was ratified by Indonesia in 1981. Nevertheless, before implementing regulations of this New York Convention were promulgated, the courts remained reluctant to enforce<br> foreign-rendered awards in spite of the The 1958 United Nations Conventions <br> on the Recognition and Enforcement of Foreign Arbitral Awards (The “New York Convention”) was ratified by Indonesia in 1981. Nevertheless, before implementing regulations of this New York Convention were promulgated, the courts remained reluctant to enforce<br> foreign-rendered awards in spite of the  <a class="article-more" href="#">Read more (...)</a> </p>
 								</article>
@@ -180,12 +193,16 @@
 					<div data-anchor-name="anchor6" class="section yellow">
 						<div class="content content-two _flex">
 							<div class="content-side-nav">
+								<button class="close-side-nav-mobile"></button>
 								<ul class="_flex-col _list-none">
 									<li><a class="transformer active" href="#">banking →</a></li>
 									<li><a class="transformer" href="#">firm profile →</a></li>
 								</ul>
 							</div>
 							<div class="content-the-content">
+								<h2 class="title-content">
+									Banking
+								</h2>
 								<article class="content-overflow-inside fullpage-overflow">
 									<p>Maecenas aliquet ac justo nec lobortis. Donec imperdiet sapien tempor semper dictum. Vivamus vulputate ornare neque sit amet viverra. Ut eros leo, congue et facilisis in, tincidunt viverra dui. Quisque accumsan ante sed sem aliquam, ut convallis nibh semper. Ut ornare, lectus vitae venenatis molestie, nunc orci pharetra neque, vel sollicitudin ex tellus sagittis tortor. In hac habitasse platea dictumst. Pellentesque tincidunt nulla at libero consequat, sed ornare elit ornare. Phasellus lobortis velit eu lacus suscipit sagittis. Praesent sed pulvinar lectus, et dapibus lectus. Praesent sodales fermentum justo, in auctor orci dictum a. Phasellus ac lectus vitae sem ultrices dignissim. Fusce commodo consequat iaculis. Morbi maximus pharetra lacinia. Vestibulum viverra, felis vel venenatis euismod, justo nisl porttitor odio, sit amet mattis dolor justo non tellus.  Maecenas aliquet ac justo nec lobortis. Donec imperdiet sapien tempor semper dictum. Vivamus vulputate ornare neque sit amet viverra. Ut eros leo, congue et facilisis in, tincidunt viverra dui. Quisque accumsan ante sed sem aliquam, ut convallis nibh semper. Ut ornare, lectus vitae venenatis molestie, nunc orci pharetra neque, vel sollicitudin ex tellus sagittis tortor. In hac habitasse platea dictumst. Pellentesque tincidunt nulla at libero consequat, sed ornare elit ornare. Phasellus lobortis velit eu lacus suscipit sagittis. Praesent sed pulvinar lectus, et dapibus lectus. Praesent sodales fermentum justo, in auctor orci dictum a. Phasellus ac lectus vitae sem ultrices dignissim. Fusce commodo consequat iaculis. Morbi maximus pharetra lacinia. Vestibulum viverra, felis vel venenatis euismod, justo nisl porttitor odio, sit amet mattis dolor justo non tellus. </p>
 								</article>
@@ -232,6 +249,6 @@
 			<span></span>
 		</div>
 		<script type="text/javascript" src="assets/js/scrollmagic.js"></script>
-		<script type="text/javascript" src="assets/js/main-dist.js"></script>
+		<script type="text/javascript" src="assets/js/main-dist.js?ver=3"></script>
 	</body>
 </html>
