fixed bug side nav when click wont scroll shitty fucks

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 						<div class="content content-two _flex">
 							<div class="content-side-nav">
 								<button class="close-side-nav-mobile"></button>
-								<ul class="_flex-col _list-none">
+								<ul class="_flex-col _list-none side-nav-overflow">
 									<li><a class="transformer active" href="#">greetings →</a></li>
 									<li><a class="transformer" href="#">profiles →</a></li>
 									<li><a class="transformer" href="#">values →</a></li>
@@ -80,7 +80,7 @@
 						<div class="content content-two _flex">
 							<div class="content-side-nav">
 								<button class="close-side-nav-mobile"></button>
-								<ul class="_flex-col _list-none">
+								<ul class="_flex-col _list-none side-nav-overflow">
 									<ul class="content-side-nav-group _list-none">
 										<li>corporate / m&A</li>
 										<li><a class="transformer active" href="#">Banking →</a></li>
@@ -127,7 +127,7 @@
 						<div class="content content-two _flex">
 							<div class="content-side-nav">
 								<button class="close-side-nav-mobile"></button>
-								<ul class="_flex-col _list-none">
+								<ul class="_flex-col _list-none side-nav-overflow">
 									<ul class="content-side-nav-group _list-none">
 										<li>partners</li>
 										<li><a class="transformer active" href="#">Giunseng E.P. Manullang</a></li>
@@ -194,7 +194,7 @@
 						<div class="content content-two _flex">
 							<div class="content-side-nav">
 								<button class="close-side-nav-mobile"></button>
-								<ul class="_flex-col _list-none">
+								<ul class="_flex-col _list-none side-nav-overflow">
 									<li><a class="transformer active" href="#">banking →</a></li>
 									<li><a class="transformer" href="#">firm profile →</a></li>
 								</ul>
