--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 		<link rel="shortcut icon" type="image/png" href="favicon.ico"/>
 		<link rel="stylesheet" href="assets/css/normalize-dist.css">
 		<link rel="stylesheet" href="assets/css/fullpage-dist.css">
-		<link rel="stylesheet" href="assets/css/main.css?ver=2">
+		<link rel="stylesheet" href="assets/css/main.css?ver=4">
 	</head>
 	<body data-controller="home">
 		<header id="header">
@@ -248,7 +248,7 @@
 		<div class="marker-bottom">
 			<span></span>
 		</div>
-		<script type="text/javascript" src="assets/js/scrollmagic.js"></script>
-		<script type="text/javascript" src="assets/js/main-dist.js?ver=3"></script>
+		<!-- <script type="text/javascript" src="assets/js/scrollmagic.js"></script> -->
+		<script type="text/javascript" src="assets/js/main-dist.js?ver=4"></script>
 	</body>
 </html>
