added scroll false if sidenav open and vice versa

--- a/index.html
+++ b/index.html
@@ -238,22 +238,24 @@
 								</article>
 
 								<article class="fullpage-overflow content-overflow-inside contact-job-vacancies">
-									<h2>Jr. Legal Officer</h2>
-									<p>Vivamus vulputate ornare neque sit amet viverra. Ut eros leo, congue et facilisis in, tincidunt viverra dui. Quisque accumsan ante sed sem aliquam, ut convallis nibh semper.</p>
-									<h2>HR Manager</h2>
-									<p>Phasellus lobortis velit eu lacus suscipit sagittis. Praesent sed pulvinar lectus, et dapibus lectus.</p>
-									<h2>Operations Supervisor</h2>
-									<p>Fusce commodo consequat iaculis. Morbi maximus pharetra lacinia nunc orci pharetra neque, vel sollicitudin ex.</p>
-									<h2>Jr. Legal Officer</h2>
-									<p>Vivamus vulputate ornare neque sit amet viverra. Ut eros leo, congue et facilisis in, tincidunt viverra dui. Quisque accumsan ante sed sem aliquam, ut convallis nibh semper.</p>
-									<h2>HR Manager</h2>
-									<p>Phasellus lobortis velit eu lacus suscipit sagittis. Praesent sed pulvinar lectus, et dapibus lectus.</p>
-									<h2>Operations Supervisor</h2>
-									<p>Fusce commodo consequat iaculis. Morbi maximus pharetra lacinia nunc orci pharetra neque, vel sollicitudin ex.</p>
+									<div>
+										<h2>Jr. Legal Officer</h2>
+										<p>Vivamus vulputate ornare neque sit amet viverra. Ut eros leo, congue et facilisis in, tincidunt viverra dui. Quisque accumsan ante sed sem aliquam, ut convallis nibh semper.</p>
+										<h2>HR Manager</h2>
+										<p>Phasellus lobortis velit eu lacus suscipit sagittis. Praesent sed pulvinar lectus, et dapibus lectus.</p>
+										<h2>Operations Supervisor</h2>
+										<p>Fusce commodo consequat iaculis. Morbi maximus pharetra lacinia nunc orci pharetra neque, vel sollicitudin ex.</p>
+										<h2>Jr. Legal Officer</h2>
+										<p>Vivamus vulputate ornare neque sit amet viverra. Ut eros leo, congue et facilisis in, tincidunt viverra dui. Quisque accumsan ante sed sem aliquam, ut convallis nibh semper.</p>
+										<h2>HR Manager</h2>
+										<p>Phasellus lobortis velit eu lacus suscipit sagittis. Praesent sed pulvinar lectus, et dapibus lectus.</p>
+										<h2>Operations Supervisor</h2>
+										<p>Fusce commodo consequat iaculis. Morbi maximus pharetra lacinia nunc orci pharetra neque, vel sollicitudin ex.</p>
+									</div>
 								</article>
 								<div class="content-overflow-process"><span></span></div>
 								<div class="content-footer _flex">
-									<span><a href="http://facebook.com">disclaimer</a></span>
+									<span><a href="#">disclaimer</a></span>
 									<span><a href="#">privacy policy</a></span>
 									<span><a href="#">copyright@2018</a></span>
 								</div>
@@ -276,11 +278,6 @@
 		<script type="text/javascript" src="assets/js/dev/fullpage.js"></script>
 
 		<script type="text/javascript" src="assets/js/main-dist.js?ver=4"></script>
-		<!-- //@prepros-prepend dev/jquery-3.3.1.min.js
-//@prepros-prepend dev/scrolloverflow.min.js
-//@prepros-prepend dev/probe-scrolloverflow.min.js
-//@prepros-prepend dev/tweenmax.js
-//@prepros-prepend dev/mousewheel.js
-//@prepros-prepend dev/fullpage.js -->
+		
 	</body>
 </html>
